spacing fixed

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ footer
 {
     position: relative;
     width: 100%;
-    height: 400px;
+    height: 300px;
     background: #3586ff;
 }
 p {
@@ -29,30 +29,38 @@ p {
     width: 100%;
     color: #fff;
     background: #3586ff;
+    text-decoration: none;
 }
-
+a {
+    text-decoration: none;
+    font-size: 25px;
+}
 .options {
-    position: relative;
     z-index: 10;
     width: 100%;
     min-height: 100px;
+    margin: auto;
     background: #3586ff;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
 }
 .choice {
-    z-index: 10;
-    width: 33.33%;
+    width: 48%;
     min-height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
-.game {
-    z-index: 10;
-    width: center;
-    background: #3586ff;
-}
+
 .back-button {
     position: absolute;
-    width: 20%;
-    margin-left: 80%;
+    width: 30%;
+    margin-left: 70%;
     background: #3586ff;
+    text-decoration: none;
 }
 footer .wave
 {
